--- a/aula015/exercicio/index.html
+++ b/aula015/exercicio/index.html
@@ -48,11 +48,11 @@
     <div>
         <h1>Exercicio Arrays e Objetos</h1>
         <p>Preencha o formulário abaixo com suas informações.</p>
-        <form action="" method="get">
-            <label for="inome">Nome:</label><input type="text" name="nome" id="inome"> <br>
-            <label for="isobrenome">Sobrenome:</label><input type="text" name="sobrenome" id="isobrenome"> <br>
-            <label for="ipeso">Peso:</label><input type="number" name="peso" id="ipeso"><br>
-            <label for="ialtura">Altura:</label><input type="number" name="altura" id="ialtura">
+        <form class="formulario" action="" method="get">
+            <label for="inome">Nome:</label><input type="text" name="nome" id="inome" required> <br>
+            <label for="isobrenome">Sobrenome:</label><input type="text" name="sobrenome" id="isobrenome" required> <br>
+            <label for="ipeso">Peso:</label><input type="number" name="peso" id="ipeso" required><br>
+            <label for="ialtura">Altura:</label><input type="number" name="altura" id="ialtura" required>
             <input class="botao" type="submit" value="Enviar">
         </form>
     </div>
