--- a/aula015/exercicio/index.html
+++ b/aula015/exercicio/index.html
@@ -12,14 +12,18 @@
         body {
             background-color: rgb(52, 134, 205);
         }
-        div {
+        .formu {
             background-color: aliceblue;
             width: 700px;
             height: 400px;
-            margin: auto;
             border-radius: 10px;
             padding: 20px;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.242);
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         h1 {
             margin-bottom: 40px;
@@ -42,20 +46,34 @@
             color: aliceblue;
             cursor: pointer;
         }
+        .resultado {
+            text-align: center;
+            background-color: aliceblue;
+            width: 700px;
+            height: 400px;
+            margin-top: 20px;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.242);
+        }
     </style>
 </head>
 <body>
-    <div>
-        <h1>Exercicio Arrays e Objetos</h1>
-        <p>Preencha o formulário abaixo com suas informações.</p>
-        <form class="formulario" action="" method="get">
-            <label for="inome">Nome:</label><input type="text" name="nome" id="inome" required> <br>
-            <label for="isobrenome">Sobrenome:</label><input type="text" name="sobrenome" id="isobrenome" required> <br>
-            <label for="ipeso">Peso:</label><input type="number" name="peso" id="ipeso" required><br>
-            <label for="ialtura">Altura:</label><input type="number" name="altura" id="ialtura" required>
-            <input class="botao" type="submit" value="Enviar">
-        </form>
-    </div>
+    <main class="container">
+        <div class="formu">
+            <h1>Exercicio Arrays e Objetos</h1>
+            <p>Preencha o formulário abaixo com suas informações.</p>
+            <form class="formulario" action="" method="get">
+                <label for="inome">Nome:</label><input type="text" name="nome" id="inome" required> <br>
+                <label for="isobrenome">Sobrenome:</label><input type="text" name="sobrenome" id="isobrenome" required> <br>
+                <label for="ipeso">Peso:</label><input type="number" name="peso" id="ipeso" required><br>
+                <label for="ialtura">Altura:</label><input type="number" name="altura" id="ialtura" required>
+                <input class="botao" type="submit" value="Enviar">
+            </form>
+        </div>
+        <div class="resultado">
+        </div>
+    </main>
     <script src="ex.js"></script>
 </body>
 </html>
