--- a/aula018/index.html
+++ b/aula018/index.html
@@ -36,9 +36,9 @@
             <h1>Calcule o seu IMC</h1>
             <form action="" id="form" method="post">
                 <label for="ipeso">Peso:</label>
-                <input type="number" name="peso" id="ipeso" placeholder="Digite seu peso" required step="0.1">
+                <input type="text" name="peso" id="ipeso" placeholder="Digite seu peso" required step="0.1">
                 <label for="ialtura">Altura:</label>
-                <input type="number" name="ialtura" id="ialtura" placeholder="Digite sua altura" required step="0.1">
+                <input type="text" name="ialtura" id="ialtura" placeholder="Digite sua altura" required step="0.1">
                 <input type="submit" value="Calcular" class="botao">
             </form>
         </div>
