Resultado do Exercicio da Aula 44

--- a/aula018/index.html
+++ b/aula018/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calcule seu IMC</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -34,7 +34,7 @@
         </div>
         <div>
             <h1>Calcule o seu IMC</h1>
-            <form action="" id="form" method="post">
+            <form action="/" id="form" method="post">
                 <label for="ipeso">Peso:</label>
                 <input type="text" name="peso" id="ipeso" placeholder="Digite seu peso" required step="0.1">
                 <label for="ialtura">Altura:</label>
@@ -42,9 +42,7 @@
                 <input type="submit" value="Calcular" class="botao">
             </form>
         </div>
-        <div>
-            <p class="resultado"></p>
-            <p class="erro"></p>
+        <div class="resultado">
         </div>
     </section>
     <script src="./assets/js/main.js"></script>
