--- a/aula025/index.html
+++ b/aula025/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <section class="container">
-        <h1 id="texto">Resultado aq</h1>
+    <section class="pai">
+        <h1 class="titulo">Lorem, ipsum dolor sit amet</h1>
     </section>
     <script src="./assets/js/main.js"></script>
 </body>
