--- a/aula025-outraforma/index.html
+++ b/aula025-outraforma/index.html
@@ -8,11 +8,8 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <section class="pai">
-        <div class="container">
+    <section class="container">
             <h1 class="titulo">Lorem, ipsum dolor sit amet</h1>
-            <p class="paragrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint labore non, error vitae distinctio corporis. Sapiente, distinctio quasi eum iure odio incidunt excepturi suscipit in, tempore ab atque error voluptatum.</p>
-        </div>
     </section>
     <script src="./assets/js/main.js"></script>
 </body>
