--- a/aula027/index.html
+++ b/aula027/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 027</title>
+    <title>Aula 027 - Exercicio</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <section class="pai">
         <div class="container">
             <h1 class="titulo">Lorem, ipsum dolor sit amet</h1>
-            <p class="paragrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint labore non, error vitae distinctio corporis. Sapiente, distinctio quasi eum iure odio incidunt excepturi suscipit in, tempore ab atque error voluptatum.</p>
+            <div class="paragrafos">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus labore magni voluptate dolores, at, dolorum, eos itaque iste magnam quidem expedita natus minima quia sint? Facere voluptate quae illum rerum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus labore magni voluptate dolores, at, dolorum, eos itaque iste magnam quidem expedita natus minima quia sint? Facere voluptate quae illum rerum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus labore magni voluptate dolores, at, dolorum, eos itaque iste magnam quidem expedita natus minima quia sint? Facere voluptate quae illum rerum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus labore magni voluptate dolores, at, dolorum, eos itaque iste magnam quidem expedita natus minima quia sint? Facere voluptate quae illum rerum.</p>
+            </div>
         </div>
     </section>
     <script src="./assets/js/main.js"></script>
