--- a/aula032/index.html
+++ b/aula032/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="container">
             <h1 class="titulo">Timer</h1>
-            <div class="timer">00:00:00</div>
+            <div id="timer">00:00:00</div>
             <button class="iniciar">Iniciar</button>
             <button class="pausar">Pausar</button>
             <button class="zerar">Zerar</button>
