--- a/aula034/index.html
+++ b/aula034/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lista de tarefas</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    <section class="pai">
-        <div class="container">
-            <h1 class="titulo">Lorem, ipsum dolor sit amet</h1>
-            <p class="paragrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint labore non, error vitae distinctio corporis. Sapiente, distinctio quasi eum iure odio incidunt excepturi suscipit in, tempore ab atque error voluptatum.</p>
+    <section class="container">
+        <h1 class="titulo">Lista de Tarefas</h1>
+        <div>
+            <input type="text" class="inputNovaTarefa">
+            <button class="btnAddTarefa">Adcionar Tarefa</button>
+        </div>
+        <div>
+            <ul class="tarefas">
+
+            </ul>
         </div>
     </section>
     <script src="./assets/js/main.js"></script>
 </body>
+
 </html>
