finalizando lista de tarefas

--- a/aula034/index.html
+++ b/aula034/index.html
@@ -12,8 +12,9 @@
 <body>
     <section class="container">
         <h1 class="titulo">Lista de Tarefas</h1>
+        <p>Organize seu dia-a-dia!</p>
         <div>
-            <input type="text" class="inputNovaTarefa">
+            <input type="text" class="inputNovaTarefa" placeholder="Exemplo: Fazer café" required>
             <button class="btnAddTarefa">Adcionar Tarefa</button>
         </div>
         <div>
